<resources>
    <string name="app_name">MyNote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="take_photo">Take photo</string>
    <string name="add_image">Add image</string>
    <string name="drawing">Drawing</string>
    <string name="image_view_content_description">ImageView Content Description</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="normal_blur">Normal Blur</string>
    <string name="inner_blur">Inner Blur</string>
    <string name="none">None</string>
    <string name="outer_blur">Outer Blur</string>
    <string name="solid_blur">Solid Blur</string>
    <string name="bg_color">BG Color</string>
    <string name="undo">Undo</string>
    <string name="eraser">Eraser</string>
    <string name="discard">Discard</string>
    <string name="clear_all">Clear All</string>

    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>